--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <span>Je suis Enzo DA SILVA RIBEIRO, étudiant en BTS SIO (Services Informatiques aux Organisations),
             option SLAM (Solutions Logicielles et Applications Métiers), qui est une option spécialisée dans 
             le développement, au Lycée Pasteur Mont Roland (39100).  Actuellement diplômé du diplôme de BAC 
-            Pro SN (Système Numérique). <br><br> Mon projet professionnel est de devenir Webmaster / Web développeur
+            Pro SN (Système Numérique) avec mention BIEN. <br><br> Mon projet professionnel est de devenir Webmaster / Web développeur
             (concepteur de sites internet) après mes deux ans d'études en BTS SIO et de peut-être devenir 
             auto-entrepreneur.
             <br>Durant ces années, j'ai pu acquérir plusieurs compétences :
@@ -99,20 +99,20 @@
     <h1>Expériences professionnelles</h1>
     <div class="stage2">
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
-        <p class="date"> <i class="far fa-calendar-alt"></i>Janvier 2023 - Fevrier 2023</p>
+        <p class="date"> <i class="far fa-calendar-alt"></i>Janvier 2023 - Février 2023</p>
         <h2>Stage de 5 semaines</h2>
-        <p class="texte">J'ai effectué un stage à Dole ou j'ai pu réaliser :</p>
+        <p class="texte">J'ai effectué un stage à Dole où j'ai pu réaliser :</p>
         <div class="description">
-            <p><i class="fas fa-circle"></i>Réalisation d'un site web en Laravel 9 </p>
-            <p><i class="fas fa-circle"></i>Découverte et utilisation des logiciels de Illustrator et Photoshop</p>
-            <p><i class="fas fa-circle"></i>Utilisation d'une base de données</p>
+            <p><i class="fas fa-circle"></i>Réalisation d'un site web en Laravel 9. </p>
+            <p><i class="fas fa-circle"></i>Découverte et utilisation des logiciels de Illustrator et Photoshop.</p>
+            <p><i class="fas fa-circle"></i>Utilisation d'une base de données.</p>
         </div>
     </div>
     <div class="stage1">
         <div class="sacs"> <img src="images/temps-de-travail.png" alt="engrenage"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Juillet 2022 - Août 2022</p>
         <h2>Travail d'été de 1 mois  </h2>
-        <p class="texte">J'ai effectué un stage chez SARL EUROFLACO à Chevigny ou j'ai pu réaliser :</p>
+        <p class="texte">J'ai effectué une mission chez SARL EUROFLACO à Chevigny où j'ai pu réaliser :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Remplissage de flacons sur palette.</p>
             <p><i class="fas fa-circle"></i>Mise en conformité des palettes.</p>
@@ -122,7 +122,7 @@
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Mai 2022 - Juin 2022</p>
         <h2>Stage de 6 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez Diminutif à Longchamp ou j'ai pu réaliser :</p>
+        <p class="texte">J'ai effectué un stage chez Diminutif à Longchamp où j'ai pu réaliser :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Création d'un site web vitrine en:</p>
             <p><i class="fas fa-circle"></i>HTML</p>
@@ -133,7 +133,7 @@
         <div class="sacs"> <img src="images/temps-de-travail.png" alt="engrenage"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Juin 2021</p>
         <h2>Travail d'été de 2 semaines </h2>
-        <p class="texte">J'ai effectué un stage chez DEVRED à Dijon Toison D'Or ou j'ai pu réaliser :</p>
+        <p class="texte">J'ai effectué une mission chez DEVRED à Dijon Toison D'Or où j'ai pu réaliser :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Vente, conseil.</p>
             <p><i class="fas fa-circle"></i>Réapprovisionnement.</p>
@@ -145,21 +145,21 @@
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Mai 2021</p>
         <h2>Stage de 4 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez D.S.I Dijon Services Informatique à Dijon ou j'ai pu réaliser :</p>
+        <p class="texte">J'ai effectué un stage chez D.S.I Dijon Services Informatique à Dijon où j'ai pu réaliser :</p>
         <div class="description">
-            <p><i class="fas fa-circle"></i>Maintenance de pc du client</p>
-            <p><i class="fas fa-circle"></i>Vente de produits informatiques</p>
-            <p><i class="fas fa-circle"></i>Conseil au public</p>
+            <p><i class="fas fa-circle"></i>Maintenance de pc du client.</p>
+            <p><i class="fas fa-circle"></i>Vente de produits informatiques.</p>
+            <p><i class="fas fa-circle"></i>Conseil au public.</p>
         </div>
     </div>
     <div class="stage1">
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Décembre 2019 - Janvier 2020</p>
         <h2>Stage de 10 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez TIBCO SERVICES à Dijon ou j'ai pu réaliser :</p>
+        <p class="texte">J'ai effectué un stage chez TIBCO SERVICES à Dijon où j'ai pu réaliser :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Maintenance d’ordinateur de bureau de certaines banques et de certaines sociétés telles que Sephora ou des PMU....</p>
-            <p><i class="fas fa-circle"></i>Inventaire des locaux</p>
+            <p><i class="fas fa-circle"></i>Inventaire des locaux.</p>
             <p><i class="fas fa-circle"></i>Réparation de machines dans les PMU.</p>
         </div>
     </div>
@@ -167,7 +167,7 @@
 </section>
 <section id="formation" class="formation">
     
-    <h1>Diplôme et formation</h1>
+    <h1>Diplômes et formations</h1>
     <div class="encadrement"> 
     <div class="formation1">
         <div class="sacs"> <img src="images/planification 2.png" alt="Icône de planification en blanc"> </div>
@@ -194,7 +194,7 @@
             <div class="img_item"><img src="images/logo.png" alt="logo du portfolio"></div>
             <div class="sous_item">
                 <h1>Portfolio</h1>
-                <p>La création de mon portfolio en HTML, CSS, javascript, pour que vous puissiez me découvrir un peu </p>
+                <p>La création de mon portfolio en HTML, CSS, javascript, pour que vous puissiez me découvrir un peu. </p>
             </div>
         </a>
         </div>
@@ -205,7 +205,7 @@
                 <h1>TPMP</h1>
                 <p>L’objectif du projet est de développer une application C# permettant à un 
                     administrateur de créer des paris et consulter la liste de ses derniers en 
-                    définissant les résultats 
+                    définissant les résultats. 
                 </p>
             </div>
         </a>
@@ -217,8 +217,8 @@
                 <h1>TSR Backend</h1>
                 <p>L’objectif du projet est de développer en Laravel une application Web permettant 
                     de faciliter les étudiants pour les épreuves de Bac et de BTS. 
-                    pour remplir l’entête des feuilles, avec les infos de l’épreuve. 
-                    D'on 2 outils différents, un outil backend et Front-End
+                    Pour remplir l’entête des feuilles, avec les infos de l’épreuve 
+                    dont 2 outils différents: un outil backend et Front-End.
                 </p>
             </div>
          </a>
@@ -230,8 +230,8 @@
                 <h1>TSR Front-End</h1>
                 <p>L’objectif du projet est de développer en Laravel une application Web permettant 
                     de faciliter les étudiants pour les épreuves de Bac et de BTS. 
-                    pour remplir l’entête des feuilles, avec les infos de l’épreuve. 
-                    D'on 2 outils différents, un outil backend et Front-End
+                    Pour remplir l’entête des feuilles, avec les infos de l’épreuve
+                    dont 2 outils différents: un outil backend et Front-End.
                 </p>
             </div>
          </a>
@@ -253,8 +253,8 @@
         concepts, innovation de fabrication, etc…. Cela a pour but d’évaluer l’impact sur l’environnement et l’organisation.
         </p>
         <p>
-        Ma veille technologique porte sur le DLSS, je tire "pull" mes informations depuis google , twitter et bien d'autre site de renseignement sur le DLSS de NVIDIA. 
-        J'ai mis en place des alertes google pour recevoir automatiquement les nouveautés et les mise a jour sur le DLSS "push".
+        Ma veille technologique porte sur le DLSS, je tire "pull" mes informations depuis google , twitter et bien d'autres sites de renseignements sur le DLSS de NVIDIA. 
+        J'ai mis en place des alertes google pour recevoir automatiquement les nouveautés et les mises à jour sur le DLSS "push".
     </p>
     </div>
 </section>
@@ -265,19 +265,19 @@
         <hr>
         <ul class="social-media-list">
           <li><a href="https://github.com/EnzoDA?tab=repositories" target="_blank" class="contact-icon">
-            <i class="fab fa-github" aria-hidden="true"></i></a>
+            <i class="fab fa-github"></i></a>
           </li>
             <details data-popover="down">
             <summary><li><a href="tel:0608172136"  class="contact-icon">
-            <i class="fas fa-mobile-alt" aria-hidden="true"></i></a>
+            <i class="fas fa-mobile-alt"></i></a>
           </li></summary>
             <p>06 08 17 21 36</p>
             </details>
           <li><a href="mailto:enzodasilvaribeiro@gmail.com" target="_blank" class="contact-icon">
-            <i class="far fa-envelope" aria-hidden="true"></i></a>
+            <i class="far fa-envelope"></i></a>
           </li>
           <li><a href="https://www.linkedin.com/in/enzo-da-silva-ribeiro-0794b0232/" target="_blank" class="contact-icon">
-            <i class="fab fa-linkedin" aria-hidden="true"></i></a>
+            <i class="fab fa-linkedin"></i></a>
           </li>       
         </ul>
         <hr>
