--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="sacs"> <img src="images/planification 2.png" alt="Icône de planification en blanc"> </div>
         <p class="date"> <i class="far fa-calendar-alt"></i>2021 - 2023</p>
         <h2>BTS SIO SLAM</h2>
-        <p class="texte">Lycée Pasteur Mont Roland Dole, Brevet de technicien supérieur - Services informatiques aux organisations, Option SLAM (Solutions Logicielles et Applications Métiers)</p>
+        <p class="texte">Lycée Pasteur Mont Roland Dole, Brevet de technicien supérieur - Services informatiques aux organisations, Option SLAM (Solutions Logicielles et Applications Métiers) en cours</p>
     </div>
 </div>
 <div class="encadrement"> 
@@ -288,21 +288,21 @@
         <form id="contact-form" action="envoi-email.php" method="post" >
           <div class="form-item">
             <input type="text" id="name" disabled name="name" required>
-            <label>Name:</label>
+            <label for="name">Name:</label>
           </div>
           <div class="form-item">
             <input type="text" id="email" disabled name="email" required>
-            <label>Email:</label>
+            <label for="email">Email:</label>
           </div>
           <div class="form-item">
             <input type="text" id="subject" disabled name="subject" required>
-            <label>Objet:</label>
+            <label for="objet">Objet:</label>
           </div>
           <div class="form-item">
             <textarea class="" id="message" disabled name="message"  rows="4" required></textarea>
-            <label>Message:</label>
+            <label for="message">Message:</label>
           </div>
-          <button type="submit"  class="submit-btn">Send</button>  
+          <button type="submit"  class="submit-btn">Envoyer</button>  
         </form>
       </div>
     </div>
