--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <div class="stage2">
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Janvier 2023 - Février 2023</p>
-        <h2>Stage de 5 semaines</h2>
-        <p class="texte">J'ai effectué un stage à Dole où j'ai pu réaliser :</p>
+        <h2>Projet personnel</h2>
+        <p class="texte">J'ai effectué un projet personnel à Dole où j'ai pu réaliser :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Réalisation d'un site web en Laravel 9. </p>
             <p><i class="fas fa-circle"></i>Découverte et utilisation des logiciels de Illustrator et Photoshop.</p>
@@ -316,6 +316,23 @@
             <div class="footer_email">
             <p><i class="fa fa-envelope"></i> enzodasilvaribeiro@gmail.com</p>
             <p><i class="fas fa-phone"></i> 06 08 17 21 36</p>
+            <button id="btn_ml"> Mentions légales </button>
+            <div id="modal" class="modal">
+                <div class="modal_content">
+                    <span class="close">&times;</span> 
+                    <h1>MENTIONS LÉGALES</h1>
+                    <p>Conformément aux dispositions de la loi n° 2004-575 du 21 juin 
+                        2004 pour la confiance en l'économie numérique, il est précisé aux 
+                        utilisateurs du site enzodasilvaribeiro l'identité des différents 
+                        intervenants dans le cadre de sa réalisation et de son suivi.
+                    </p>
+                    <h1>Edition du site </h1>
+                    <p>Le présent site, accessible à l’URL https://enzodasilvaribeiro.online/ (le « Site »), est édité par :
+
+                        Enzo Da Silva Ribeiro, résidant 13 imp la fontaine du grand pre 21110 Chambeire, de nationalité Française (France), né(e) le 05/12/2003, 
+                        </p>
+                </div>
+            </div>
             </div>
         </div>
 
