--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                   <p class="text-title">PHP</p>
                 </div>
               </div>
+              <div class="card">
+                <div class="card-details">
+                  <p class="text-title">LARAVEL</p>
+                </div>
+              </div>
             </div>
             <div class="cv">
             <a class="cv_page" href="CV.pdf" target="_blank">Retrouvez mon CV ici !</a>
@@ -318,10 +323,12 @@
   <footer>
     <div class="footer">
         <div class="footer-text">
+          <div class="cotent_texte">
             <p> &#169; 2023 Enzo Da Silva Ribeiro</p>
             <div class="footer_email">
             <p><i class="fa fa-envelope"></i> enzodasilvaribeiro@gmail.com</p>
             <p><i class="fas fa-phone"></i> 06 08 17 21 36</p>
+          </div>
             <button id="btn_ml"> Mentions légales </button>
             <div id="modal" class="modal">
                 <div class="modal_content">
@@ -334,9 +341,24 @@
                     </p>
                     <h1>Edition du site </h1>
                     <p>Le présent site, accessible à l’URL https://enzodasilvaribeiro.online/ (le « Site »), est édité par :
-
-                        Enzo Da Silva Ribeiro, résidant 13 imp la fontaine du grand pre 21110 Chambeire, de nationalité Française (France), né(e) le 05/12/2003, 
-                        </p>
+                      Enzo Da Silva Ribeiro, résidant 13 imp la fontaine du grand pre 21110 Chambeire, de nationalité Française 
+                      (France), né(e) le 05/12/2003. 
+                    </p>
+                    <h1>Hébergement</h1>
+                    <p>
+                      Le Site est hébergé par la société Hostinger International LTD, situé , (contact téléphonique ou email 
+                      : https://www.hostinger.fr/contact).
+                    </p>
+                    <h1>Directeur de publication</h1>
+                    <p>
+                      Le Directeur de la publication du Site est Enzo Da Silva Ribeiro.
+                    </p>
+                    <h1>Nous contacter</h1>
+                    <p>
+                      Par téléphone : +33608172136 <br>Par email : enzodasilvaribeiro@gmail.com <br>
+                      Par courrier : 13 imp la fontaine du grand pre 21110 Chambeire <br>
+                      Génération des mentions légales par <a href="https://www.legalstart.fr/">Legalstart.</a> 
+                    </p>
                 </div>
             </div>
             </div>
