--- a/index.html
+++ b/index.html
@@ -294,29 +294,29 @@
         <h3><a href="mailto:enzodasilvaribeiro@gmail.com" target="_blank" class="contact-icon"><i class="fa fa-envelope"></i>enzodasilvaribeiro@gmail.com </a></h3>
         <h3><a href="tel:0608172136"  class="contact-icon"><i class="fas fa-phone"></i>06 08 17 21 36</a></h3>
       </div>
-      <!--
+      
       <div class="contact-form-bas">
         <form id="contact-form" action="envoi-email.php" method="post" >
           <div class="form-item">
-            <input type="text" id="name" disabled name="name" required>
+            <input type="text" id="name"  name="name" required>
             <label for="name">Name:</label>
           </div>
           <div class="form-item">
-            <input type="text" id="email" disabled name="email" required>
+            <input type="text" id="email"  name="email" required>
             <label for="email">Email:</label>
           </div>
           <div class="form-item">
-            <input type="text" id="subject" disabled name="subject" required>
+            <input type="text" id="subject"  name="subject" required>
             <label for="objet">Objet:</label>
           </div>
           <div class="form-item">
-            <textarea class="" id="message" disabled name="message"  rows="4" required></textarea>
+            <textarea class="" id="message" name="message"  rows="4" required></textarea>
             <label for="message">Message:</label>
           </div>
           <button type="submit"  class="submit-btn">Envoyer</button>  
         </form>
       </div>
-    </div>-->
+    </div>
   </section>
 
 
