--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <h3><a href="tel:0608172136"  class="contact-icon"><i class="fas fa-phone"></i>06 08 17 21 36</a></h3>
       </div>
       
-      <div class="contact-form-bas">
+    <!--  <div class="contact-form-bas">
         <form id="contact-form" action="envoi-email.php" method="post" >
           <div class="form-item">
             <input type="text" id="name"  name="name" required>
@@ -315,7 +315,7 @@
           </div>
           <button type="submit"  class="submit-btn">Envoyer</button>  
         </form>
-      </div>
+      </div>-->
     </div>
   </section>
 
