--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
+    <link rel="shortcut icon" type="logo/png" href="images/logo.ico">
+  </head>
 <title>Portfolio | Da Silva Ribeiro Enzo</title>
 <body>
 <header>
