--- a/index.html
+++ b/index.html
@@ -256,16 +256,9 @@
 <section id="veille" class="veille">
     <div class="veille_texte">
     <h1>Veille Technologique</h1>
-    <h2>Qu'est-ce que la veille technologique ?</h2>
-    <p>La veille technologique, élément de la veille stratégique, consiste à surveiller les évolutions techniques, les innovations dans un secteur 
-        d’activité donnée. La veille technologique comprend notamment la surveillance, la collecte, le partage et la diffusion d’information permettant
-        d’anticiper ou de s’informer sur des changements en matière de recherche, développement, brevet, lancement de nouveaux produits, matériaux, processus, 
-        concepts, innovation de fabrication, etc…. Cela a pour but d’évaluer l’impact sur l’environnement et l’organisation.
-        </p>
-        <p>
-        Ma veille technologique porte sur le DLSS, je tire "pull" mes informations depuis google , twitter et bien d'autres sites de renseignements sur le DLSS de NVIDIA. 
-        J'ai mis en place des alertes google pour recevoir automatiquement les nouveautés et les mises à jour sur le DLSS "push".
-    </p>
+    <h2>Tailwind CSS</h2>
+    <a class="btn" href="tableau.xlsx" target="_blank">Retrouvez ma Veille ici !</a>
+    <a class="btn" href="Veille.pdf" target="_blank">Retrouvez mon Tableau de synthèse ici !</a>
     </div>
 </section>
 <section id="contact">
@@ -295,7 +288,7 @@
         <h3><a href="tel:0608172136"  class="contact-icon"><i class="fas fa-phone"></i>06 08 17 21 36</a></h3>
       </div>
       
-    <!--  <div class="contact-form-bas">
+     <div class="contact-form-bas">
         <form id="contact-form" action="envoi-email.php" method="post" >
           <div class="form-item">
             <input type="text" id="name"  name="name" required>
@@ -315,7 +308,7 @@
           </div>
           <button type="submit"  class="submit-btn">Envoyer</button>  
         </form>
-      </div>-->
+      </div>
     </div>
   </section>
 
