card js et texte police

--- a/index.html
+++ b/index.html
@@ -93,10 +93,15 @@
                   <p class="text-title">LARAVEL</p>
                 </div>
               </div>
+              <div class="card">
+                <div class="card-details">
+                  <p class="text-title">JS</p>
+                </div>
+              </div>
             </div>
             <div class="cv">
-            <a class="cv_page" href="CV.pdf" target="_blank">Retrouvez mon CV ici !</a>
-            <a class="cv_dl" href="CV.pdf" download="CV.pdf" alt="Telécharger mon CV"><span class="material-symbols-outlined">
+            <a class="cv_page" href="cv-enzo-da-silva-ribeiro.pdf" target="_blank">Retrouvez mon CV ici !</a>
+            <a class="cv_dl" href="cv-enzo-da-silva-ribeiro.pdf" download="cv-enzo-da-silva-ribeiro.pdf" alt="Telécharger mon CV"><span class="material-symbols-outlined">
                 arrow_downward
             </span></a>
             </div>
@@ -289,7 +294,7 @@
         <h3><a href="tel:0608172136"  class="contact-icon"><i class="fas fa-phone"></i>06 08 17 21 36</a></h3>
       </div>
       
-     <div class="contact-form-bas">
+   <!-- <div class="contact-form-bas">
         <form id="contact-form" action="envoi-email.php" method="post" >
           <div class="form-item">
             <input type="text" id="name"  name="name" required>
@@ -310,7 +315,7 @@
           <button type="submit"  class="submit-btn">Envoyer</button>  
         </form>
       </div>
-    </div>
+    </div>-->
   </section>
 
 
@@ -359,7 +364,7 @@
         </div>
 
   </footer>
-<button id="scroll_top_button" onclick="scrollToTop()"class="scroll_top_button" 
+<button id="scroll_top_button" onclick="scrollToTop()" class="scroll_top_button" 
     type="button">
     <span class="material-symbols-outlined">
         arrow_upward
