--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
         </h2>
         <h1>DA SILVA RIBEIRO</h1>
         <h1>ENZO</h1>
+        <a class="cv_page" href="CV.pdf" target="_blank">
         <div class="cv">
-            <a class="cv_page" href="CV.pdf" target="_blank">Mon CV en ligne</a>
-      </div>
+            Mon CV en ligne
+        </div>
+      </a>
 </section>
 <section id="a_propos" class="a_propos">
     <div class="text_moi">
